--- a/HousingWithHist.ipynb
+++ b/HousingWithHist.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "Name: ocean_proximity, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,16 +380,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10c2382e8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1117380b8>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "Name: income_cat, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,16 +482,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10c53c198>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x117363470>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -514,16 +514,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x111378ac8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11750da20>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -546,16 +546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x111cebdd8>"
+       "<matplotlib.legend.Legend at 0x117a272b0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "Name: median_income, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,32 +650,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x113755eb8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1137b7588>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1137d79e8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113969f60>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x11399a518>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1139cba90>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113a08048>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113a305f8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x113a30630>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113a870f0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113aad668>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113ad6be0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x113b08198>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113b30710>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113b59c88>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113b8a240>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1078a24a8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1117237b8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111a985c0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111c48240>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1116879b0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1117f5748>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1117385c0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111c5e6a0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x111c5e780>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111d2e5f8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111936b70>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111935128>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x111b856a0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111b9fc18>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111cd91d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1117f7748>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -698,6 +698,178 @@
     "from pandas.plotting import scatter_matrix\n",
     "attributes = [\"median_house_value\", \"median_income\", \"total_rooms\", \"housing_median_age\"]\n",
     "scatter_matrix(housing[attributes], figsize=(12, 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 16512 entries, 17606 to 15775\n",
+      "Data columns (total 10 columns):\n",
+      "longitude             16512 non-null float64\n",
+      "latitude              16512 non-null float64\n",
+      "housing_median_age    16512 non-null float64\n",
+      "total_rooms           16512 non-null float64\n",
+      "total_bedrooms        16354 non-null float64\n",
+      "population            16512 non-null float64\n",
+      "households            16512 non-null float64\n",
+      "median_income         16512 non-null float64\n",
+      "median_house_value    16512 non-null float64\n",
+      "ocean_proximity       16512 non-null object\n",
+      "dtypes: float64(9), object(1)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "housing.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing[\"rooms_per_household\"] = housing[\"total_rooms\"]/housing[\"households\"]\n",
+    "housing[\"bedrooms_per_room\"] = housing[\"total_bedrooms\"]/housing[\"total_rooms\"]\n",
+    "housing[\"population_per_household\"] = housing[\"population\"]/housing[\"households\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "median_house_value          1.000000\n",
+       "median_income               0.687160\n",
+       "rooms_per_household         0.146285\n",
+       "total_rooms                 0.135097\n",
+       "housing_median_age          0.114110\n",
+       "households                  0.064506\n",
+       "total_bedrooms              0.047689\n",
+       "population_per_household   -0.021985\n",
+       "population                 -0.026920\n",
+       "longitude                  -0.047432\n",
+       "latitude                   -0.142724\n",
+       "bedrooms_per_room          -0.259984\n",
+       "Name: median_house_value, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_matrix = housing.corr()\n",
+    "corr_matrix[\"median_house_value\"].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing = strat_train_set.drop(\"median_house_value\", axis=1)\n",
+    "housing_label = strat_train_set[\"median_house_value\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-118.51  ,   34.26  ,   29.    , 2119.5   ,  433.    , 1164.    ,\n",
+       "        408.    ,    3.5409])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "imputer = SimpleImputer(strategy=\"median\")\n",
+    "housing_num = housing.drop(\"ocean_proximity\", axis=1) # since imputer works only with numerical data\n",
+    "imputer.fit(housing_num)\n",
+    "imputer.statistics_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-118.51  ,   34.26  ,   29.    , 2119.5   ,  433.    , 1164.    ,\n",
+       "        408.    ,    3.5409])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_num.median().values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = imputer.transform(housing_num) # numpy array\n",
+    "housing_tr = pd.DataFrame(X, columns=housing_num.columns) # pandas DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16512 entries, 0 to 16511\n",
+      "Data columns (total 8 columns):\n",
+      "longitude             16512 non-null float64\n",
+      "latitude              16512 non-null float64\n",
+      "housing_median_age    16512 non-null float64\n",
+      "total_rooms           16512 non-null float64\n",
+      "total_bedrooms        16512 non-null float64\n",
+      "population            16512 non-null float64\n",
+      "households            16512 non-null float64\n",
+      "median_income         16512 non-null float64\n",
+      "dtypes: float64(8)\n",
+      "memory usage: 1.0 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "housing_tr.info()"
    ]
   },
   {
