added custom transformer and Pipeline

--- a/HousingWithHist.ipynb
+++ b/HousingWithHist.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "Name: ocean_proximity, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,16 +380,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1117380b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1126a2400>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "Name: income_cat, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,16 +482,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x117363470>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x117e5f828>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -514,16 +514,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11750da20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x117e5f7b8>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -546,16 +546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x117a272b0>"
+       "<matplotlib.legend.Legend at 0x1184fbba8>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "Name: median_income, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,32 +650,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1078a24a8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1117237b8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111a985c0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111c48240>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1116879b0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1117f5748>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1117385c0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111c5e6a0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x111c5e780>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111d2e5f8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111936b70>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111935128>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x111b856a0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111b9fc18>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x111cd91d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1117f7748>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1185076d8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1121d6588>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1126b8518>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1120df550>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1125bf978>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x112111d30>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1124c74a8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1120fde48>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1120fd550>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x112348630>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11852cba8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x118537160>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x11238f6d8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11236bc50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x112431208>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1123d6780>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -799,7 +799,7 @@
        "        408.    ,    3.5409])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "        408.    ,    3.5409])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -870,6 +870,176 @@
    ],
    "source": [
     "housing_tr.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17606     <1H OCEAN\n",
+       "18632     <1H OCEAN\n",
+       "14650    NEAR OCEAN\n",
+       "3230         INLAND\n",
+       "3555      <1H OCEAN\n",
+       "19480        INLAND\n",
+       "8879      <1H OCEAN\n",
+       "13685        INLAND\n",
+       "4937      <1H OCEAN\n",
+       "4861      <1H OCEAN\n",
+       "Name: ocean_proximity, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cat = housing[\"ocean_proximity\"]\n",
+    "housing_cat.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1, 2, 0, 2, 0, 2, 0, 0])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cat_encoded, housing_categories = housing_cat.factorize()\n",
+    "housing_cat_encoded[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['<1H OCEAN', 'NEAR OCEAN', 'INLAND', 'NEAR BAY', 'ISLAND'], dtype='object')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chentingkao/.local/share/virtualenvs/deerChasing-GFp4DYOM/lib/python3.7/site-packages/sklearn/preprocessing/_encoders.py:368: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
+      "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
+      "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
+      "  warnings.warn(msg, FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "encoder = OneHotEncoder()\n",
+    "housing_cat_1hot = encoder.fit_transform(housing_cat_encoded.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cat_1hot.toarray() # from scipy sparse matrix to numpy array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "rooms_ix, bedrooms_ix, population_ix, household_ix = 3, 4, 5, 6\n",
+    "\n",
+    "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, add_bedrooms_per_room=True):\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    def transform(self, X, y=None):\n",
+    "        rooms_per_household = X[:, rooms_ix] / X[:, household_ix]\n",
+    "        population_per_household = X[:, population_ix] / X[:, household_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "            return np.c_[X, rooms_per_household, population_per_household, bedrooms_per_room]\n",
+    "        else:\n",
+    "            return np.c_[X, rooms_per_household, population_per_household]\n",
+    "        \n",
+    "attr_adder = CombinedAttributesAdder(add_bedrooms_per_room=False)\n",
+    "housing_extra_attribs = attr_adder.transform(housing.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    "    ('attribs_adder', CombinedAttributesAdder()),\n",
+    "    ('std_scaler', StandardScaler()),\n",
+    "])\n",
+    "\n",
+    "housing_num_tr = num_pipeline.fit_transform(housing_num)"
    ]
   },
   {
