first model ran

--- a/HousingWithHist.ipynb
+++ b/HousingWithHist.ipynb
@@ -386,7 +386,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1126a2400>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10d50fd30>"
       ]
      },
      "execution_count": 8,
@@ -488,7 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x117e5f828>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x112f37940>"
       ]
      },
      "execution_count": 12,
@@ -520,7 +520,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x117e5f7b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11306bc88>"
       ]
      },
      "execution_count": 13,
@@ -552,7 +552,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1184fbba8>"
+       "<matplotlib.legend.Legend at 0x1135e1198>"
       ]
      },
      "execution_count": 14,
@@ -656,22 +656,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1185076d8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1121d6588>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1126b8518>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1120df550>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1125bf978>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x112111d30>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1124c74a8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1120fde48>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1120fd550>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x112348630>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11852cba8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x118537160>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x11238f6d8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11236bc50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x112431208>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1123d6780>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x10d54d278>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d79aa20>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d565da0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d7a3ba8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x10d748550>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d84a828>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d818908>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d0b45f8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x10d0b46d8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113608630>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d549ba8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d54b160>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x10d38b6d8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d370c50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d66e208>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d690780>]],\n",
        "      dtype=object)"
       ]
      },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1107,7 @@
        "\twith 198144 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1128,13 +1128,84 @@
        "(16512, 16)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "housing_prepared.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
+       "         normalize=False)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(housing_prepared, housing_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predictions: [210644.60465462 317768.80729055 210956.43320428  59218.98857356\n",
+      " 189747.55852838]\n",
+      "labels: [286600.0, 340600.0, 196900.0, 46300.0, 254500.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "some_data = housing.iloc[:5]\n",
+    "some_data_prepared = full_pipeline.transform(some_data)\n",
+    "some_labels = housing_label.iloc[:5]\n",
+    "print(\"predictions:\", lin_reg.predict(some_data_prepared))\n",
+    "print(\"labels:\", list(some_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68628.19819848923"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "housing_predictions = lin_reg.predict(housing_prepared)\n",
+    "lin_mse = mean_squared_error(housing_label, housing_predictions)\n",
+    "lin_rmse = np.sqrt(lin_mse)\n",
+    "lin_rmse"
    ]
   },
   {
