k-fold cross validation

--- a/HousingWithHist.ipynb
+++ b/HousingWithHist.ipynb
@@ -386,7 +386,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10d50fd30>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x119ae7d68>"
       ]
      },
      "execution_count": 8,
@@ -488,7 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x112f37940>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11f524908>"
       ]
      },
      "execution_count": 12,
@@ -520,7 +520,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11306bc88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11f645828>"
       ]
      },
      "execution_count": 13,
@@ -552,7 +552,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1135e1198>"
+       "<matplotlib.legend.Legend at 0x11fbc0e48>"
       ]
      },
      "execution_count": 14,
@@ -656,22 +656,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x10d54d278>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d79aa20>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d565da0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d7a3ba8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x10d748550>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d84a828>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d818908>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d0b45f8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x10d0b46d8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x113608630>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d549ba8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d54b160>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x10d38b6d8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d370c50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d66e208>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x10d690780>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1184b7ba8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119a8fb38>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119a3a668>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119da1668>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1197d8208>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119b72630>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119924240>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119d53438>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x119d537b8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11fbfc6d8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119b6bc50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119c3e208>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x119c50780>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119d5ccf8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119d4c2b0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x119ae2828>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1195,7 @@
        "68628.19819848923"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,6 +1206,174 @@
     "lin_mse = mean_squared_error(housing_label, housing_predictions)\n",
     "lin_rmse = np.sqrt(lin_mse)\n",
     "lin_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "           min_impurity_split=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "tree_reg.fit(housing_prepared, housing_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_predictions = tree_reg.predict(housing_prepared)\n",
+    "tree_mse = mean_squared_error(housing_label, housing_predictions)\n",
+    "tree_rmse = np.sqrt(tree_mse)\n",
+    "tree_rmse  # the rmse should not be zero...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(tree_reg, housing_prepared, housing_label, scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "tree_rmse_scores = np.sqrt(-scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [68068.37899436 68362.44350526 71090.21111639 69075.68829058\n",
+      " 70523.56422419 74408.95822172 71233.38643916 71344.98396303\n",
+      " 77859.6421214  68984.78931911]\n",
+      "Mean: 71095.20461952002\n",
+      "Standard Deviation: 2868.9512871623233\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display_scores(scores):\n",
+    "    print(\"Scores:\", scores)\n",
+    "    print(\"Mean:\", scores.mean())\n",
+    "    print(\"Standard Deviation:\", scores.std())\n",
+    "\n",
+    "display_scores(tree_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [66782.73844317 66960.11809222 70347.95243904 74739.57055258\n",
+      " 68031.13389115 71193.84181183 64969.63056023 68281.61137907\n",
+      " 71552.91565846 67665.10081739]\n",
+      "Mean: 69052.46136451427\n",
+      "Standard Deviation: 2731.674003577556\n"
+     ]
+    }
+   ],
+   "source": [
+    "lin_scores = cross_val_score(lin_reg, housing_prepared, housing_label, scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "lin_rmse_scores = np.sqrt(-lin_scores)\n",
+    "display_scores(lin_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chentingkao/.local/share/virtualenvs/deerChasing-GFp4DYOM/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "22447.523962955336"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "forest_reg.fit(housing_prepared, housing_label)\n",
+    "forest_predictions = forest_reg.predict(housing_prepared)\n",
+    "forest_mse = mean_squared_error(housing_label, forest_predictions)\n",
+    "forest_rmse = np.sqrt(forest_mse)\n",
+    "forest_rmse  # the rmse should not be zero...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [52356.30022086 50994.1469897  52774.00029495 54798.22930037\n",
+      " 52337.37217142 57380.66535184 51624.44638716 51154.49538836\n",
+      " 54880.92455788 53347.18645689]\n",
+      "Mean: 53164.776711944505\n",
+      "Standard Deviation: 1898.3345791952336\n"
+     ]
+    }
+   ],
+   "source": [
+    "forest_scores = cross_val_score(forest_reg, housing_prepared, housing_label, scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "forest_rmse_scores = np.sqrt(-forest_scores)\n",
+    "display_scores(forest_rmse_scores)"
    ]
   },
   {
